# waveMage

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini  main.cpp  output.txt  temp.txt
headers/include/implot-master/: implot_demo.cpp
headers/include/ma/: miniaudio.h
headers/include/raudio/: raudio.c  raudio.h
headers/lib/cmake/SDL2/: sdl2-config-version.cmake  sdl2-config.cmake
lib/: output.txt
